# portfolio

./: pyproject.toml
infos/: urls.py  views.py
infos/templates/infos/: contact.html  me.html  sg.html
portfolio/: settings.py  urls.py
