[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Moduł 1 Kodilla"
authors = ["Adrian Jelonek <ajelonek@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
django = "^3.1.1"
lorem = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
